tests/ast/positive/func_call.gp
int main () {
    int f;
    f = thisIsAFuncCall(x, y);
}