tests/ast/negative/bad_graph.gp
int main () {
    graph[flag1, flag2] g;
}